--- a/components/icon.html
+++ b/components/icon.html
@@ -3,3 +3,10 @@
     <use xlink:href="images/sprite.svg#vector"></use>
   </svg>
 </div>
+
+<!-- Arrow Icon -->
+<div class="icon-container icon--arrow">
+  <svg class="icon">
+    <use xlink:href="images/sprite.svg#arrow-right-solid"></use>
+  </svg>
+</div>
