Adding nav-bar component

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,6 +40,12 @@ p {
   margin: 0;
 }
 
+/* Container */
+.container {
+  width: 80vw;
+  margin: auto;
+}
+
 /* Logo */
 .logo {
   font-size: 3rem;
@@ -107,6 +113,8 @@ p {
 
 .list--inline .list__item {
   display: inline-block;
+  margin-right: 3rem;
+  padding: 0;
 }
 
 /* Buttons */
@@ -300,4 +308,26 @@ p {
 .question--plus {
 font-weight: normal;
 font-size: 3rem;
+}
+
+/* Navigation Bar */
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 7rem;
+}
+
+.nav-bar .list__item {
+  color: var(--color-heading);
+}
+
+.nav-right {
+  display: flex;
+  align-items: center;
+}
+
+.nav-bar .btn {
+  margin-left: 2rem;
 }
