--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,6 +26,7 @@ h3 {
 
 h1 {
   font-size: 6rem;
+  line-height: 7.5rem;
 }
 
 h2 {
@@ -42,7 +43,8 @@ p {
 
 /* Container */
 .container {
-  width: 80vw;
+  width: auto;
+  max-width: 1020px;
   margin: auto;
 }
 
@@ -273,22 +275,22 @@ p {
   justify-content: space-between;
 }
 
-.collapsible__heading, .collapsible__icon {
-  margin: 2rem 4.5rem ;
+.collapsible__heading,
+.collapsible__icon {
+  margin: 2rem 4.5rem;
 }
 
 .collapsible--expanded .collapsible__heading,
 .collapsible--expanded .collapsible__icon {
   margin: 0;
   margin-bottom: 2rem;
-
 }
 
 .collapsible__content {
   max-height: 0;
   overflow: hidden;
   opacity: 0;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .collapsible--expanded .collapsible__content {
@@ -306,8 +308,8 @@ p {
 }
 
 .question--plus {
-font-weight: normal;
-font-size: 3rem;
+  font-weight: normal;
+  font-size: 3rem;
 }
 
 /* Navigation Bar */
@@ -330,4 +332,43 @@ font-size: 3rem;
 
 .nav-bar .btn {
   margin-left: 2rem;
+}
+
+/* Hero */
+.hero-background {
+  background-image: url(../images/hero-background.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+}
+
+.hero {
+  padding: 6rem 0;
+}
+
+.hero-left {
+  justify-self: center;
+  align-self: center;
+}
+
+.hero-right {
+  justify-self: end;
+}
+
+.hero__heading {
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+}
+
+.hero__text {
+  margin-bottom: 4.5rem;
+}
+
+.hero__button {
+  margin-right: 2.5rem;
+}
+
+.hero__footer {
+  display: flex;
+  align-items: center;
 }
