Adding mid-content component

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -414,9 +414,6 @@ p {
 }
 
 /* Features */
-/* .features .grid {
-  column-gap: 4rem;
-} */
 
 .features-left {
   position: relative;
@@ -425,4 +422,16 @@ p {
 
 .featue__text {
   margin-bottom: 9rem;
+}
+
+/* Mid Content */
+.mid-content {
+  display: flex;
+  align-items: center;
+}
+
+.mid-content hr {
+  height: 100px;
+  margin-right: 2rem;
+  border: 1px solid #b9b9b8;
 }
